# GameGateServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md
GateServer/: Business.cpp  Business.h  Config.cpp  Config.h  GateUser.cpp  GateUser.h  Work.cpp  Work.h  main.cpp
config/: gateserver_config.ini.example
include/: BaseFunc.cpp  BaseFunc.h  BaseSetting.h  BufReadWrite.cpp  BufReadWrite.h  ClientNet.cpp  ClientNet.h  CommonDefine.h  Decode.h  GameDefine.h  IniConfig.cpp  IniConfig.h  LBase.h  LMsg.cpp  LMsg.h  LMsgCS.h  LMsgSS.h  LUser.cpp  LUser.h  LVideo.cpp  LVideo.h  PackUnpack.h  ServerNet.cpp  ServerNet.h
